[module generator] Add [Success|Error]Handler to process a code after each type generation