@@ -1,12 +1,14 @@
 package com.weedow.schemaorg.generator.core;
 
+import com.weedow.schemaorg.generator.core.handler.ErrorHandler;
+import com.weedow.schemaorg.generator.core.handler.SuccessHandler;
 import com.weedow.schemaorg.generator.model.Type;
 import com.weedow.schemaorg.generator.template.TemplateService;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
- import org.mockito.Spy;
+import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.File;
@@ -36,13 +38,7 @@ class SchemaModelGeneratorImplTest {
 
         schemaModelGenerator.generate();
 
-        final File modelFolder = options.getModelFolder();
-        final File modelImplFolder = options.getModelImplFolder();
-        final String modelPackage = options.getModelPackage();
-        final String modelImplPackage = options.getModelImplPackage();
-        final String dataTypePackage = options.getDataTypePackage();
-
-        verifyCommonTemplates(modelFolder, modelImplFolder, modelPackage, modelImplPackage, dataTypePackage);
+        verifyCommonTemplates(options, templateService);
     }
 
     @Test
@@ -54,18 +50,11 @@ class SchemaModelGeneratorImplTest {
 
         schemaModelGenerator.generate();
 
-        final File modelFolder = options.getModelFolder();
-        final File modelImplFolder = options.getModelImplFolder();
-        final File dataTypeFolder = options.getDataTypeFolder();
-        final String modelPackage = options.getModelPackage();
-        final String modelImplPackage = options.getModelImplPackage();
-        final String dataTypePackage = options.getDataTypePackage();
-
-        verifyCommonTemplates(modelFolder, modelImplFolder, modelPackage, modelImplPackage, dataTypePackage);
+        verifyCommonTemplates(options, templateService);
         verify(templateService).apply(
                 "templates/abstract_data_type",
-                new File(dataTypeFolder, "DataType.java"),
-                new Context(type, dataTypePackage, Collections.emptySet())
+                new File(options.getDataTypeFolder(), "DataType.java"),
+                new Context(type, options.getDataTypePackage(), Collections.emptySet())
         );
     }
 
@@ -79,18 +68,11 @@ class SchemaModelGeneratorImplTest {
 
         schemaModelGenerator.generate();
 
-        final File modelFolder = options.getModelFolder();
-        final File modelImplFolder = options.getModelImplFolder();
-        final File dataTypeFolder = options.getDataTypeFolder();
-        final String modelPackage = options.getModelPackage();
-        final String modelImplPackage = options.getModelImplPackage();
-        final String dataTypePackage = options.getDataTypePackage();
-
-        verifyCommonTemplates(modelFolder, modelImplFolder, modelPackage, modelImplPackage, dataTypePackage);
+        verifyCommonTemplates(options, templateService);
         verify(templateService).apply(
                 "templates/data_type",
-                new File(dataTypeFolder, "Boolean.java"),
-                new Context(type, dataTypePackage, Set.of("org.schema.model.JsonLdTypeName"))
+                new File(options.getDataTypeFolder(), "Boolean.java"),
+                new Context(type, options.getDataTypePackage(), Set.of("org.schema.model.JsonLdTypeName"))
         );
     }
 
@@ -108,18 +90,11 @@ class SchemaModelGeneratorImplTest {
 
         schemaModelGenerator.generate();
 
-        final File modelFolder = options.getModelFolder();
-        final File modelImplFolder = options.getModelImplFolder();
-        final File dataTypeFolder = options.getDataTypeFolder();
-        final String modelPackage = options.getModelPackage();
-        final String modelImplPackage = options.getModelImplPackage();
-        final String dataTypePackage = options.getDataTypePackage();
-
-        verifyCommonTemplates(modelFolder, modelImplFolder, modelPackage, modelImplPackage, dataTypePackage);
+        verifyCommonTemplates(options, templateService);
         verify(templateService).apply(
                 "templates/data_type",
-                new File(dataTypeFolder, "XPathType.java"),
-                new Context(type, dataTypePackage, Set.of("org.schema.model.JsonLdTypeName"))
+                new File(options.getDataTypeFolder(), "XPathType.java"),
+                new Context(type, options.getDataTypePackage(), Set.of("org.schema.model.JsonLdTypeName"))
         );
     }
 
@@ -135,22 +110,16 @@ class SchemaModelGeneratorImplTest {
 
         schemaModelGenerator.generate();
 
-        final File modelFolder = options.getModelFolder();
-        final File modelImplFolder = options.getModelImplFolder();
-        final String modelPackage = options.getModelPackage();
-        final String modelImplPackage = options.getModelImplPackage();
-        final String dataTypePackage = options.getDataTypePackage();
-
-        verifyCommonTemplates(modelFolder, modelImplFolder, modelPackage, modelImplPackage, dataTypePackage);
+        verifyCommonTemplates(options, templateService);
         verify(templateService).apply(
                 "templates/type_interface",
-                new File(modelFolder, "ActionStatusType.java"),
-                new Context(type, modelPackage, Collections.emptySet())
+                new File(options.getModelFolder(), "ActionStatusType.java"),
+                new Context(type, options.getModelPackage(), Collections.emptySet())
         );
         verify(templateService).apply(
                 "templates/type_enumeration",
-                new File(modelImplFolder, "ActionStatusTypeEnum.java"),
-                new Context(type, modelImplPackage, Set.of("org.schema.model.ActionStatusType", "org.schema.model.JsonLdTypeName"))
+                new File(options.getModelImplFolder(), "ActionStatusTypeEnum.java"),
+                new Context(type, options.getModelImplPackage(), Set.of("org.schema.model.ActionStatusType", "org.schema.model.JsonLdTypeName"))
         );
     }
 
@@ -164,26 +133,103 @@ class SchemaModelGeneratorImplTest {
 
         schemaModelGenerator.generate();
 
+        verifyCommonTemplates(options, templateService);
+        verify(templateService).apply(
+                "templates/type_interface",
+                new File(options.getModelFolder(), "Thing.java"),
+                new Context(type, options.getModelPackage(), Collections.emptySet())
+        );
+        verify(templateService).apply(
+                "templates/type_implementation",
+                new File(options.getModelImplFolder(), "ThingImpl.java"),
+                new Context(type, options.getModelImplPackage(), Set.of("org.schema.model.Thing", "org.schema.model.JsonLdTypeName"))
+        );
+    }
+
+    @Test
+    void generate_with_success_handler() throws IOException {
+        final SuccessHandler successHandler = mock(SuccessHandler.class);
+        options.addSuccessHandler(successHandler);
+        final ErrorHandler errorHandler = mock(ErrorHandler.class);
+        options.addErrorHandler(errorHandler);
+
+        when(schemaDefinitions.entrySet()).thenReturn(Collections.emptySet());
+
+        schemaModelGenerator.generate();
+
+        verifyCommonTemplates(options, templateService, successHandler);
+        verifyNoInteractions(errorHandler);
+    }
+
+    @Test
+    void generate_with_error_handler() throws IOException {
+        final SuccessHandler successHandler = mock(SuccessHandler.class);
+        options.addSuccessHandler(successHandler);
+        final ErrorHandler errorHandler = mock(ErrorHandler.class);
+        options.addErrorHandler(errorHandler);
+
+        when(schemaDefinitions.entrySet()).thenReturn(Collections.emptySet());
+
         final File modelFolder = options.getModelFolder();
         final File modelImplFolder = options.getModelImplFolder();
         final String modelPackage = options.getModelPackage();
         final String modelImplPackage = options.getModelImplPackage();
         final String dataTypePackage = options.getDataTypePackage();
 
-        verifyCommonTemplates(modelFolder, modelImplFolder, modelPackage, modelImplPackage, dataTypePackage);
-        verify(templateService).apply(
-                "templates/type_interface",
-                new File(modelFolder, "Thing.java"),
-                new Context(type, modelPackage, Collections.emptySet())
+        final IOException ioException1 = new IOException();
+        doThrow(ioException1).when(templateService).apply(
+                "templates/jsonld_typename",
+                new File(modelFolder, "JsonLdTypeName.java"),
+                new Context(null, modelPackage, Collections.emptySet())
         );
-        verify(templateService).apply(
-                "templates/type_implementation",
-                new File(modelImplFolder, "ThingImpl.java"),
-                new Context(type, modelImplPackage, Set.of("org.schema.model.Thing", "org.schema.model.JsonLdTypeName"))
+        final IOException ioException2 = new IOException();
+        doThrow(ioException2).when(templateService).apply(
+                "templates/jsonld_node",
+                new File(modelFolder, "JsonLdNode.java"),
+                new Context(null, modelPackage, Collections.emptySet())
         );
+        final IOException ioException3 = new IOException();
+        doThrow(ioException3).when(templateService).apply(
+                "templates/jsonld_node_impl",
+                new File(modelImplFolder, "JsonLdNodeImpl.java"),
+                new Context(null, modelImplPackage, Set.of(
+                        SchemaGeneratorUtils.resolveClassName(modelPackage, dataTypePackage, SchemaGeneratorUtils.JSON_LD_NODE),
+                        SchemaGeneratorUtils.resolveClassName(modelPackage, dataTypePackage, SchemaGeneratorUtils.JSON_LD_TYPE_NAME)
+                ))
+        );
+
+        schemaModelGenerator.generate();
+
+        verify(errorHandler).onError("templates/jsonld_typename",
+                new File(modelFolder, "JsonLdTypeName.java"),
+                new Context(null, modelPackage, Collections.emptySet()),
+                ioException1
+        );
+        verify(errorHandler).onError(
+                "templates/jsonld_node",
+                new File(modelFolder, "JsonLdNode.java"),
+                new Context(null, modelPackage, Collections.emptySet()),
+                ioException2
+        );
+        verify(errorHandler).onError(
+                "templates/jsonld_node_impl",
+                new File(modelImplFolder, "JsonLdNodeImpl.java"),
+                new Context(null, modelImplPackage, Set.of(
+                        SchemaGeneratorUtils.resolveClassName(modelPackage, dataTypePackage, SchemaGeneratorUtils.JSON_LD_NODE),
+                        SchemaGeneratorUtils.resolveClassName(modelPackage, dataTypePackage, SchemaGeneratorUtils.JSON_LD_TYPE_NAME)
+                )),
+                ioException3
+        );
+        verifyNoInteractions(successHandler);
     }
 
-    private void verifyCommonTemplates(File modelFolder, File modelImplFolder, String modelPackage, String modelImplPackage, String dataTypePackage) throws IOException {
+    private static void verifyCommonTemplates(GeneratorOptions options, TemplateService templateService) throws IOException {
+        final File modelFolder = options.getModelFolder();
+        final File modelImplFolder = options.getModelImplFolder();
+        final String modelPackage = options.getModelPackage();
+        final String modelImplPackage = options.getModelImplPackage();
+        final String dataTypePackage = options.getDataTypePackage();
+
         verify(templateService).apply(
                 "templates/jsonld_typename",
                 new File(modelFolder, "JsonLdTypeName.java"),
@@ -195,6 +241,34 @@ class SchemaModelGeneratorImplTest {
                 new Context(null, modelPackage, Collections.emptySet())
         );
         verify(templateService).apply(
+                "templates/jsonld_node_impl",
+                new File(modelImplFolder, "JsonLdNodeImpl.java"),
+                new Context(null, modelImplPackage, Set.of(
+                        SchemaGeneratorUtils.resolveClassName(modelPackage, dataTypePackage, SchemaGeneratorUtils.JSON_LD_NODE),
+                        SchemaGeneratorUtils.resolveClassName(modelPackage, dataTypePackage, SchemaGeneratorUtils.JSON_LD_TYPE_NAME)
+                ))
+        );
+    }
+
+    private static void verifyCommonTemplates(GeneratorOptions options, TemplateService templateService, SuccessHandler successHandler) throws IOException {
+        verifyCommonTemplates(options, templateService);
+
+        final File modelFolder = options.getModelFolder();
+        final File modelImplFolder = options.getModelImplFolder();
+        final String modelPackage = options.getModelPackage();
+        final String modelImplPackage = options.getModelImplPackage();
+        final String dataTypePackage = options.getDataTypePackage();
+
+        verify(successHandler).onSuccess("templates/jsonld_typename",
+                new File(modelFolder, "JsonLdTypeName.java"),
+                new Context(null, modelPackage, Collections.emptySet())
+        );
+        verify(successHandler).onSuccess(
+                "templates/jsonld_node",
+                new File(modelFolder, "JsonLdNode.java"),
+                new Context(null, modelPackage, Collections.emptySet())
+        );
+        verify(successHandler).onSuccess(
                 "templates/jsonld_node_impl",
                 new File(modelImplFolder, "JsonLdNodeImpl.java"),
                 new Context(null, modelImplPackage, Set.of(
